# pkcpp

./: .gitignore  CMakeLists.txt  README.md  set.toml  xmake.lua
doc/: compile.md  log.md  plan.md
src/: main.cxx
src/basic/: init.cxx  logger.cxx  parallel.cxx  types.cxx  types_nf_rdf.cxx  types_para.cxx
src/func/: binning.cxx  binning_omp.cxx  nad.cxx  nf.cxx  poly.cxxx  rdf.cxx  ring.cxxx  sq.cxxx
src/io/: cli_parser.cxx  conf_parser.cxx  flags.cxx  para.cxx  parser.cxx  read_file.cxx  types.cxx
test/: config.toml
